# Somtoday-Mod

./: .gitignore  CONTRIBUTING.md  README.md  composer.json  generate.php
.github/ISSUE_TEMPLATE/: bug_report_en.md  bug_report_nl.md  feature_request_en.md  feature_request_nl.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template_en.md  pull_request_template_nl.md
Android/: AndroidManifest.xml
Android-GeckoView/: settings.gradle.kts
Android-GeckoView/app/: build.gradle.kts  proguard-rules.pro
Android-GeckoView/gradle/: libs.versions.toml
Android-WebView/: settings.gradle.kts
Android-WebView/app/: build.gradle.kts
Android/app/: build.gradle.kts
Android/gradle/: libs.versions.toml
Chromium/: manifest.json  options.html  options.js  popup.html  popup.js  script.js  styles.css  sw.js  version_info.json
Chromium/css/: custom-homework.css  minigames.css  mod-settings.css  night.css  platformer.css  somtoday-recap.css  styles.css
Chromium/data/: settings.html
Chromium/platformer/: credits.md
Chromium/platformer_levels/: lvl-0.xml  lvl-template.xml
Chromium/scripts/: colors.js  error_checks.js  execute_after_page_load.js  grade_defender.js  legacy_platformer.js  main_functions.js  minigame.js  platformer.js  save_version_management.js  shorthand_functions.js  the_dungeon.js  the_escape.js
Firefox/: manifest.json  options.html  options.js  popup.html  popup.js  script.js  sw.js  version_info.json
Firefox/wasm/: Cargo.toml
Firefox/wasm/src/: grades.rs  lib.rs
Userscript/: SomtodayMod-min.user.js  SomtodayMod.user.js  SomtodayModBeta.user.js
(+102 files in other folders)
