[package]
name = "somtoday-analytics"
version = "1.0.0"
authors = ["Somtoday Mod Team"]
edition = "2021"
description = "High-performance grade analytics engine for Somtoday Mod"
repository = "https://github.com/Jona-Zwetsloot/Somtoday-Mod"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# The `console_error_panic_hook` crate provides better debugging of panics
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
